--- a/style2.css
+++ b/style2.css
@@ -208,7 +208,7 @@ section .title::after{
 }
 /* about section styling */
 .about .title::after{
-    content: "who i am";
+    content: "Who I am";
 }
 .about .about-content .left{
     width: 45%;
@@ -431,7 +431,7 @@ section .title::after{
 }
 /* contact section styling */
 .contact .title::after{
-    content: "get in touch";
+    content: "Get in touch";
 }
 .contact .contact-content .column{
     width: calc(50% - 30px);
